--- a/GitTaak1/GitTaak1/MainWindow.xaml
+++ b/GitTaak1/GitTaak1/MainWindow.xaml
@@ -5,8 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GitTaak1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Kleurenpsychologie" Height="600" Width="950"
+        Background="LightGray">
+    <Grid Margin="0,0,0,-16">
+        <TextBlock HorizontalAlignment="Center" Margin="0,10,0,0" TextWrapping="Wrap" Text="Kleurenpsychologie" VerticalAlignment="Top" Height="63" Width="256" FontSize="30" FontStyle="Italic"/>
         
+
+
+
     </Grid>
 </Window>
